# scraper

./: .backend_pid  .coverage  .env  .env.example  .env.production  .env.production.template  .env.template  .frontend_pid  .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  =1.1.0  ADDITIONAL_TESTING_RECOMMENDATIONS.md  ADVANCED_CRAWLING_SUMMARY.md  ADVANCED_PAGE_VIEWER_COMPLETE.md  ADVANCED_PAGE_VIEWER_IMPLEMENTATION_COMPLETE.md  ADVANCED_VIEWER_FIXED.md  API_DOCUMENTATION.md  AUTHENTICATION_FIX_COMPLETE.md  BACKEND_TESTING_REPORT.md  CFPL_IMPLEMENTATION_COMPLETE.md  CFPL_PRODUCTION_READY.md  CHANGELOG.md  COMPLETE_FIX_SUMMARY.py  COMPLETE_ISSUE_RESOLUTION.md  COMPLETE_REPOSITORY_POLISH_REPORT.md  COMPREHENSIVE_SYSTEM_FIXES.md  COMPREHENSIVE_TESTING_COMPLETION.md  COMPREHENSIVE_TEST_COVERAGE.md  COMPREHENSIVE_UPDATE_SUMMARY.md  CONFIGURATION_OPTIONS_ANALYSIS.md  CONTRIBUTING.md  CRAWLER_TO_SCRAPER_IMPLEMENTATION.md  CRAWLER_TO_SCRAPER_PIPELINE.md  CYBERPUNK_TRANSFORMATION_COMPLETE.md  DATABASE_MANAGEMENT_IMPLEMENTATION_COMPLETE.md  DEBUG_REMOVAL_COMPLETE.md  DEBUG_VIEWER_IMPLEMENTATION.md  DEPLOYMENT.md  (+239 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  production-cicd.yml  production-deployment.yml  rotation-reminder.yml
backend/crawlers/: scrapy.cfg
backend/nlp/: pipeline.py
backend/osint/: integrations.py
backend/tests/: test_pipeline.py
business_intel_scraper/: .env  .env.example  PHASE3_TESTING_REPORT.md  README.md  VISUAL_ANALYTICS_PHASE1_SUMMARY.md  __init__.py  cli.py  cli_enhanced.py  config.py  docker-compose.yml  settings.py  test_websocket.py
business_intel_scraper/backend/: config.py  dependencies.py
business_intel_scraper/cli/: __init__.py  performance.py
business_intel_scraper/config/: ai_config.yaml
business_intel_scraper/database/: config.py  models.py  setup_instructions.md
business_intel_scraper/docs/: README.md
business_intel_scraper/frontend/: CRAWLING_CONFIGURATION_GUIDE.md  PHASE2_SUMMARY.md  PHASE3_PLAN.md  README.md  frontend.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.optimized.js  vitest.config.ts
business_intel_scraper/security/: authentication.py  middleware.py  test_security.py  validation.py
business_intel_scraper/testing/: ci_cd_pipeline.py  comprehensive_test_framework.py  test_data_management.py
caching/: multi_tier_cache.py
cfpl_storage/config/: processors.json  retention.json  storage.json
config/: .env.template  __init__.py  advanced_config_manager.py  ai_config.yaml  api_config.py  api_config_template.py  config.yaml  config_loader.py  database_manager.py  development.yaml  environment.py  logging_config.py  marketplace.yaml  performance.example.yaml  production.yaml
config/templates/: business-research.env  competitor-analysis.env  development.env  security-audit.env
data/: scraper.db-shm  scraper.db-wal
docker/: Dockerfile.production  Dockerfile.queue  entrypoint.sh  health_check.sh  healthcheck.sh  nginx.conf  redis.conf  start.sh  supervisor.conf
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: ADVANCED_FEATURES.md  ARCHITECTURE_GUIDE.md  CFPL_DESIGN.md  DOCKER_DEPLOYMENT.md  README.md  README_CURRENT_STATUS.md  advanced_entity_graphs.md  ai_integration.md  api-documentation.md  api_documentation_generator.py  api_explorer.html  api_usage.md  architecture.md  backend_setup.md  deployment.md  detailed_implementation_plan.md  developer_guide.md  implementation_action_plan.md  logging.md  marketplace.md  phase2_readme.md  phase3_implementation_summary.md  security.md  setup.md  tutorial.md  visualization_implementation_roadmap.md  workflow.md
docs/api/: API_DOCUMENTATION.md  README.md  api-documentation.md
docs/deployment/: DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  README.md
docs/development/: CONTRIBUTING.md  README.md  TESTING_GUIDE.md  backend_setup.md  developer_guide.md  setup.md
docs/releases/: CHANGELOG.md  README.md  (+1 more)
error_handling/: enhanced_error_handler.py
gui/: __init__.py  api_bridge.py  enhanced_app.py  main.py
ml_pipeline/: __init__.py  ai_analytics.py  ai_integration_service.py  realtime_analytics.py  visualization_engine.py
monitoring/: alert_rules.yml  config.json  health_check.sh  health_monitor.py  prometheus-prod.yml  prometheus.yml  simple_health_monitor.py  start_monitoring.sh
performance/: advanced_caching.py
scripts/: backup.sh  check_performance_status.py  cleanup_debug_code.py  create-project.sh  database_success_test.py  demo_advanced_crawling.py  demo_intelligent_discovery.py  demo_marketplace.py  deploy.sh  final_success_report.py  implementation_summary.py  maintenance_fix.py  rotate_secrets.sh  security-scan.sh  setup-staging.sh  setup_graph_system.py  setup_visual_analytics.sh  simple_validation.py  start_real_world_testing.sh  validate_production.sh
secrets/: grafana_password.txt  jwt_secret.txt  postgres_password.txt
security/: advanced_security_middleware.py
security-reports/: pip-audit-report.json
storage/: __init__.py  capture_engine.py  cas_store.py  cfpl_integration.py  config.py  processors.py
test-research-project/: .gitignore  README.md  run.sh
tests/: conftest.py  performance_benchmark.py  run_full_coverage.py  test_advanced_crawling.py  test_advanced_entity_graph.py  test_advanced_features.py  test_ai_integration.py  test_analytics_dashboard.py  test_api.py  test_basic_structure.py  test_business_intelligence.py  test_centralized_data.py  test_comprehensive_integration.py  test_comprehensive_platform.py  test_database_solution.py  test_db_setup.py  test_gui_components.py  test_integration.py  test_intelligent_discovery.py  test_minimal_imports.py  test_performance.py  test_performance_load.py  test_production_business_data.py  test_pytest_basic.py  test_real_world_data_integration.py  test_real_world_infrastructure.py  test_repository_fixes.py  test_root_modules.py  test_scripts_utilities.py  test_security.py  test_simplified_real_world.py
user_experience/: error_handling.py
(+1208 files in other folders)
